--- a/app.json
+++ b/app.json
@@ -27,12 +27,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "image": "./assets/images/splash.png",
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
@@ -45,6 +45,11 @@
         "projectId": "d31aca27-ad10-455e-afb6-a14689f3803b"
       }
     },
-    "owner": "jeremyjones"
+    "owner": "jeremyjones",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    }
   }
 }
