--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "@react-navigation/stack": "^7.2.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
