Update BuildNumber to 4

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
       "supportsTablet": true,
       "buildNumber": "4",
       "bundleIdentifier": "com.jeremyjones.appforexecs2025",
-      "runtimeVersion": "1.0.0"
+      "runtimeVersion": "1.0.0",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
